2002-02-18  Lauris Kaplinski  <lauris@ximian.com>

	* src/widgets/paint-selector.c: Lot of rearrangements everywhere -
	I am too tired to write all these down. Basically we have one frontend
	megawidget SPPaintSelector, that interfaces to colors, gradient and more.

2002-02-10  Lauris Kaplinski  <lauris@ximian.com>

	* src/desktop.c (sp_desktop_widget_destroy): Removed stale signal
	disconnect (no idea what it was originally for)

2002-02-09  Lauris Kaplinski  <lauris@ximian.com>

	* configure.in: Removed rbuf, frgba, new font checks and arena switch

	* src/sp-namedview.c (sp_namedview_setup_grid_item): Grid settings are
	always in points, units are there just for user preference
	(sp_namedview_read_attr): Ditto

	* src/desktop-snap.c (sp_desktop_horizontal_snap): Read snap distances
	from new desktop members
	(sp_desktop_vertical_snap): Ditto
	(sp_desktop_vector_snap): Ditto
	(sp_desktop_circular_snap): Ditto

	* src/desktop-handles.c (sp_desktop_canvas): Update to new desktop structure

	* src/sodipodi.c (sodipodi_activate_desktop_private): Default method
	implementation to chain activation signal on desktop
	(sodipodi_desactivate_desktop_private): Ditto

	* src/desktop.c (sp_desktop_new): Owner does not have document pointer
	any more, so had to change signature here
	(sp_desktop_widget_init): Moved activation signals to public constructor
	(sp_dtw_desktop_activate): Activation signal handler
	(sp_dtw_desktop_desactivate): Ditto
	(sp_desktop_widget_new): Use desktop "activate" and "desactivate" signals
	instead of sodipodi ones, signature change
	(sp_desktop_class_init): Added "activate" and "desactivate" signals

	* src/dialogs/display-settings.c: Removed glade, made mostly dynamic

	* src/sodipodi.c (sodipodi_remove_desktop): Emit "destroy_desktop" if
	destroyed one was not active too
	(sodipodi_refresh_display): Convenience method

2002-02-08  Lauris Kaplinski  <lauris@ximian.com>

	* src/dialogs/document-properties.c: Do not use glade anymore, made